# nocommit-pre-commit

./: .pre-commit-hooks.yaml  README.md  nocommit.py  pyproject.toml
